Bug #10181 mysqld.exe crash with an access violation after INSERT INTO mysql.host

sql_acl.cc:
  Make sure host.db is a valid string pointer before we do our lower_case_table_names comparison